--- a/examples/navbar/package.json
+++ b/examples/navbar/package.json
@@ -15,6 +15,7 @@
     "gatsby-plugin-styled-components": "^3.1.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "styled-components": "^4.3.2"
+    "styled-components": "^4.3.2",
+    "yarn": "^1.22.4"
   }
 }
